Remove MSQ worker fault tolerance IT